<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/option_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/option_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_account_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/edit_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/consult_btn"
        app:layout_constraintEnd_toEndOf="@+id/consult_btn"
        app:layout_constraintStart_toStartOf="@+id/consult_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/consult_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/consult_information"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_welcome_text"
        app:layout_constraintVertical_bias="0.32999998" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_information_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/edit_information"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/consult_btn"
        app:layout_constraintStart_toStartOf="@+id/consult_btn"
        app:layout_constraintTop_toBottomOf="@+id/consult_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colourGrey"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_information_btn"
        app:layout_constraintStart_toStartOf="@+id/edit_information_btn"
        app:layout_constraintTop_toBottomOf="@+id/edit_information_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>