<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginVertical="12dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minWidth="100dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:textSize="23sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="5dp" />

</LinearLayout>