<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="32dp">

    <TextView
        android:id="@+id/student_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/student_search"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matricule_search_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/student_code"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_search_text" />

    <TextView
        android:id="@+id/semester_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:text="@string/semester"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/matricule_search_Text" />

    <EditText
        android:id="@+id/matricule_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/matricule_search_Text"
        app:layout_constraintStart_toEndOf="@id/matricule_search_Text"
        app:layout_constraintTop_toTopOf="@id/matricule_search_Text" />

    <EditText
        android:id="@+id/semester_search_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:digits="0123456789*"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/semester_search_text"
        app:layout_constraintEnd_toEndOf="@+id/matricule_input"
        app:layout_constraintStart_toEndOf="@+id/semester_search_text"
        app:layout_constraintTop_toTopOf="@+id/semester_search_text" />

    <TextView
        android:id="@+id/class_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:text="@string/class_code"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/semester_search_text" />

    <EditText
        android:id="@+id/class_code_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/class_code_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/class_code_text"
        app:layout_constraintTop_toTopOf="@+id/class_code_text" />

    <Button
        android:id="@+id/search_student_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="15dp"
        android:textSize="22sp"
        android:text="@string/search_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/class_code_input" />

</androidx.constraintlayout.widget.ConstraintLayout>